// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <h4
    className="spacer-bottom"
  >
    onboarding.analysis.java.maven.header
  </h4>
  <p
    className="spacer-bottom markdown"
  >
    <InstanceMessage
      message="onboarding.analysis.java.maven.text"
    />
  </p>
  <CodeSnippet
    snippet={
      Array [
        "mvn sonar:sonar",
        undefined,
        undefined,
        "-Dsonar.host.url=host",
        "-Dsonar.login=token",
      ]
    }
  />
  <p
    className="big-spacer-top markdown"
  >
    <FormattedMessage
      defaultMessage="onboarding.analysis.docs"
      id="onboarding.analysis.docs"
      values={
        Object {
          "link": <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            target="_blank"
            to="/documentation/analysis/scan/sonarscanner-for-gradle/"
          >
            onboarding.analysis.java.maven.docs_link
          </Link>,
        }
      }
    />
  </p>
  <p
    className="big-spacer-top markdown"
  >
    onboarding.analysis.browse_url_after_analysis
  </p>
</div>
`;

exports[`renders correctly 2`] = `
<div>
  <h4
    className="spacer-bottom"
  >
    onboarding.analysis.java.maven.header
  </h4>
  <p
    className="spacer-bottom markdown"
  >
    <InstanceMessage
      message="onboarding.analysis.java.maven.text"
    />
  </p>
  <CodeSnippet
    snippet={
      Array [
        "mvn sonar:sonar",
        undefined,
        "-Dsonar.organization=organization",
        "-Dsonar.host.url=host",
        "-Dsonar.login=token",
      ]
    }
  />
  <p
    className="big-spacer-top markdown"
  >
    <FormattedMessage
      defaultMessage="onboarding.analysis.docs"
      id="onboarding.analysis.docs"
      values={
        Object {
          "link": <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            target="_blank"
            to="/documentation/analysis/scan/sonarscanner-for-gradle/"
          >
            onboarding.analysis.java.maven.docs_link
          </Link>,
        }
      }
    />
  </p>
  <p
    className="big-spacer-top markdown"
  >
    onboarding.analysis.browse_url_after_analysis
  </p>
</div>
`;

exports[`renders with projectKey 1`] = `
<div>
  <h4
    className="spacer-bottom"
  >
    onboarding.analysis.java.maven.header
  </h4>
  <p
    className="spacer-bottom markdown"
  >
    <InstanceMessage
      message="onboarding.analysis.java.maven.text"
    />
  </p>
  <CodeSnippet
    snippet={
      Array [
        "mvn sonar:sonar",
        "-Dsonar.projectKey=foo",
        "-Dsonar.organization=organization",
        "-Dsonar.host.url=host",
        "-Dsonar.login=token",
      ]
    }
  />
  <p
    className="big-spacer-top markdown"
  >
    <FormattedMessage
      defaultMessage="onboarding.analysis.docs"
      id="onboarding.analysis.docs"
      values={
        Object {
          "link": <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            target="_blank"
            to="/documentation/analysis/scan/sonarscanner-for-gradle/"
          >
            onboarding.analysis.java.maven.docs_link
          </Link>,
        }
      }
    />
  </p>
  <p
    className="big-spacer-top markdown"
  >
    onboarding.analysis.auto_refresh_after_analysis
  </p>
</div>
`;
